--- a/StudyMaterialSchool.html
+++ b/StudyMaterialSchool.html
@@ -36,7 +36,7 @@
 			<!-- Home Button -->
 
 			<p class="nav_button">
-				<a href="StudyMaterial.html" >Home</a>
+				<a href="index.html" >Home</a>
             </p>
 
 			<!-- School Button -->
