--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- GBU Main Website -->
 
 	<p class="nav_button">
-		<a href="#GBU" > Main Website</a>
+		<a href="https://chaudharyshadkhan.github.io/mywebsite/index.html" > Main Website</a>
 	</p>
 
 	<!-- GBU Time Table -->
